# ComplianceQApipeline

./: .env_example  README.md  pyproject.toml  requirements.txt
backend/src/api/: server.py  telemetry.py
backend/src/graph/: nodes.py  state.py
backend/src/services/: video_indexer.py
backend/tests/: Dockerfile  docker-compose.yml
frontend/: streamlit_app.py
