[project]
name = "complianceqapipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"azure-identity",
	"azure-monitor-opentelemetry",
	"azure-search-documents",
	"azure-storage-blob",
	"fastapi",
	"firecrawl-py",
	"langchain",
	"langchain-community",
	"langchain-openai",
	"langgraph",
	"langsmith",
	"opentelemetry-instrumentation-fastapi",
	"pandas",
	"psycopg2-binary",
	"pydantic",
	"pypdf",
	"python-dotenv",
	"redis",
	"requests",
	"sqlalchemy",
	"streamlit",
	"uvicorn",
	"yt-dlp",
]
